--- a/styles/globals.css
+++ b/styles/globals.css
@@ -134,6 +134,12 @@
     rgba(0, 0, 0, 0.075) 0px -4px 0px inset;
 }
 
+.embossed-object:hover {
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 4px 36px,
+    rgba(0, 0, 0, 0.075) 0px 10px 15px -5px,
+    rgba(255, 0, 0, 0.1) 0px -6px 0px inset;
+}
+
 .shadow-video {
   box-shadow: rgb(0 0 0 / 50%) 0px 10px 36px 0px,
     rgb(0 0 0 / 75%) 0px 0px 0px 2px;
