--- a/styles/globals.css
+++ b/styles/globals.css
@@ -134,7 +134,19 @@
     rgba(0, 0, 0, 0.075) 0px -4px 0px inset;
 }
 
-.embossed-object:not([data-disable-hover]):hover {
+.embossed-object[data-state="neutral"]:hover {
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 4px 36px,
+    rgba(0, 0, 0, 0.075) 0px 10px 15px -5px,
+    rgba(0, 0, 0, 0.1) 0px -4px 0px inset;
+}
+
+.embossed-object[data-state="neutral"]:active {
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 4px 36px,
+    rgba(0, 0, 0, 0.075) 0px 10px 15px -5px,
+    rgba(0, 0, 0, 0.1) 0px -2px 0px inset;
+}
+
+.embossed-object:not([data-state="neutral"]):not([data-disable-hover]):hover {
   box-shadow: rgba(0, 0, 0, 0.05) 0px 4px 36px,
     rgba(0, 0, 0, 0.075) 0px 10px 15px -5px,
     rgba(255, 0, 0, 0.1) 0px -6px 0px inset;
