fix: hover effects video

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -134,6 +134,11 @@
     rgba(0, 0, 0, 0.075) 0px -4px 0px inset;
 }
 
+.embossed-object-small {
+  box-shadow: rgba(0, 0, 0, 0.025) 0px 2px 4px,
+    rgba(0, 0, 0, 0.05) 0px 7px 13px -4px, rgba(0, 0, 0, 0.4) 0px -2px 0px inset;
+}
+
 .embossed-object[data-state="neutral"]:hover {
   box-shadow: rgba(0, 0, 0, 0.05) 0px 4px 36px,
     rgba(0, 0, 0, 0.075) 0px 10px 15px -5px,
