--- a/styles/globals.css
+++ b/styles/globals.css
@@ -173,3 +173,7 @@
   box-shadow: rgb(255 255 255 / 20%) 0px 0px 2px 2px inset;
   border-radius: inherit;
 }
+
+.squircle {
+  corner-shape: superellipse(1.6);
+}
