--- a/styles/globals.css
+++ b/styles/globals.css
@@ -172,6 +172,7 @@
   pointer-events: none;
   box-shadow: rgb(255 255 255 / 20%) 0px 0px 2px 2px inset;
   border-radius: inherit;
+  corner-shape: superellipse(1.75);
 }
 
 .squircle {
