fix: theme preview section

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -196,3 +196,12 @@
 .squircle {
   corner-shape: superellipse(1.6);
 }
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
